@@ -3,54 +3,59 @@ import numpy as np
 
 # Principal fuente (crack): https://www.youtube.com/watch?v=9dyaI3GyUtc&ab_channel=SantiagoFiorino
 
-def detectar_patente(frame_roi, umbral = 135):
-    """
-    Recibe un parche BGR con la zona de la placa, lo pasa a blanco y negro
-    y le aplica un threshold para resaltar los caracteres.
-    Devuelve la imagen binarizada lista para mostrar.
-    """
-    # 1) Pasar a escala de grises. Esto para que sea más sencillo detectar una patente que, en general, es blanco y negro.
+def es_rectangulo(approx, tolerancia_angular=19):
+    def angle(pt1, pt2, pt0):
+        v1 = pt1 - pt0
+        v2 = pt2 - pt0
+        cos = np.dot(v1, v2) / (np.linalg.norm(v1) * np.linalg.norm(v2))
+        return np.degrees(np.arccos(np.clip(cos, -1.0, 1.0)))
+
+    if len(approx) != 4:
+        return False
+
+    pts = approx.reshape(4, 2)
+    angles = [
+        angle(pts[0], pts[2], pts[1]),
+        angle(pts[1], pts[3], pts[2]),
+        angle(pts[2], pts[0], pts[3]),
+        angle(pts[3], pts[1], pts[0]),
+    ]
+    return all(abs(a - 90) < tolerancia_angular for a in angles)
+
+def detectar_patente(frame_roi, umbral=145):
     gray = cv2.cvtColor(frame_roi, cv2.COLOR_BGR2GRAY)
-
-    # ! 2) Paso Clave
-    #  Aplicar un threshold. Ajusta 'umbral' a la iluminación del video.
-    # Según el umbral, todo valor por encima del umbral será 255, por debajo, sera 0
-    # Con esto, binarizo la imagen. 
-    # Además, hago un inverso para obtener blanco las letras, ya que por default serán negras.
-
     _, bw = cv2.threshold(gray, umbral, 255, cv2.THRESH_BINARY_INV)
-    # bw = cv2.medianBlur(bw, 3)
-    
-    kernel = np.ones((5,5), np.uint8)
-    bw_closed = cv2.morphologyEx(bw, cv2.MORPH_CLOSE, kernel)
-    
-    # Con esto, en tiempo real, voy a tener marcadas las patentes.. pero ahora tengo que detectarlas lo más automáticamente posibles.
-    # 3) Busco los contornos que definen a la imagen, y aplicandoselá al threshold..
+    bw = cv2.bilateralFilter(bw, 11, 17, 17)
 
-    contornos, _ = cv2.findContours(bw_closed, cv2.RETR_LIST, cv2.CHAIN_APPROX_SIMPLE)
+    contornos, _ = cv2.findContours(bw, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)
 
-    # Busco el aspecto de ratio de una patente en la vida real (400mm x 130mm)
-    aspect_ratio = 400.0 / 130.0  # ≃3.08
-    tol_ratio    = 0.7
-    # Descarta contornos muy pequeños (<10% del área del parche)
-    min_area = frame_roi.shape[0] * frame_roi.shape[1] * 0.001
+    aspect_ratio_objetivo = 400.0 / 130.0  # ≃3.08
+    min_area = frame_roi.shape[0] * frame_roi.shape[1] * 0.01
 
-    candidates = []
+    mejor_candidato = None
+    menor_error_aspect_ratio = float('inf')
+
     for cnt in contornos:
         area = cv2.contourArea(cnt)
-        # if area < min_area:
-        #     continue
-        
-        x, y, w, h = cv2.boundingRect(cnt)
-        aspect = float(w) / float(h)
-        # print(aspect)
-        if not np.isclose(aspect, aspect_ratio, atol=tol_ratio):
+        if area < min_area:
             continue
 
-        candidates.append(cnt)
+        epsilon = 0.02 * cv2.arcLength(cnt, True)
+        approx = cv2.approxPolyDP(cnt, epsilon, True)
 
-    # 4) Dibujar sólo los candidatos sobre la binarización
+        if not es_rectangulo(approx):
+            continue
+
+        x, y, w, h = cv2.boundingRect(approx)
+        aspect = float(w) / float(h)
+        error_aspect = abs(aspect - aspect_ratio_objetivo)
+
+        if error_aspect < menor_error_aspect_ratio:
+            menor_error_aspect_ratio = error_aspect
+            mejor_candidato = approx
+
     img_contornos = cv2.cvtColor(bw, cv2.COLOR_GRAY2BGR)
-    cv2.drawContours(img_contornos, candidates, -1, (0, 255, 0), 2)
+    if mejor_candidato is not None:
+        cv2.drawContours(img_contornos, [mejor_candidato], -1, (0, 255, 0), 2)
 
-    return bw, candidates, img_contornos
+    return bw, mejor_candidato, img_contornos
